--- a/administration/css/questionare_frontend_form.css
+++ b/administration/css/questionare_frontend_form.css
@@ -1,9 +1,3 @@
-input[type=submit]{
-    padding: 15px;
-    font-weight: bold;
-    font-size: 1.5em;
-    color: green;
-}
 #header, 
 #footer, 
 #mainmenu{
@@ -15,6 +9,7 @@ input[type=submit]{
 
 #page{
     margin: 0;
+    border: none;
     background: url(../images/content_bg.jpg) repeat;
     font: 13px Helvetica,Arial,Sans-Serif;
     color: #797979;
@@ -24,9 +19,14 @@ input[type=submit]{
     line-height: 20px;
 }
 
+#content{
+    padding: 1%;
+}
+
 .span-19{
     width: auto;
     float: none;
+    margin: 0;
 }
 
 h1 {
@@ -36,5 +36,28 @@ h1 {
     color: rgb(77, 17, 17);
     border-top: 1px #797979 dashed;
     border-bottom: 1px #797979 dashed;
+}
+
+.form{
+    background: url(../images/form-border.jpg) repeat;
+    padding: 10px;
+}
+.form > form{
+    background-color: #f5f5f5;
+    padding: 1%;
+}
+
+input[type=text],
+select{
+    line-height: 2em;
+    border-radius: 10px;
+    border: 1px solid #797979;
+    padding: 5px;
+}
+input[type=submit]{
+    padding: 15px;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: green;
 }
 
