--- a/administration/css/questionare_frontend_form.css
+++ b/administration/css/questionare_frontend_form.css
@@ -32,10 +32,12 @@
 h1 {
     text-align: center;
     font-size: 2.1em;
-    line-height: 60px;
-    color: rgb(77, 17, 17);
+    line-height: 60px;    
     border-top: 1px #797979 dashed;
     border-bottom: 1px #797979 dashed;
+}
+h1, h2{
+    color: rgb(77, 17, 17);
 }
 
 .form{
@@ -72,3 +74,42 @@ input[type=submit]:active{
     color: whitesmoke;
 }
 
+.form-sidebar{
+    padding: 2.2em 0 0 0;
+}
+
+.form-sidebar-block-content{
+    margin: 0 0 2.2em 0;
+}
+
+.form-sidebar-block-content{
+    background: url(../images/form-sidebar-block-content-background.jpg) repeat;
+    border-radius: 10px;    
+    padding: 10px;
+}
+.form-sidebar-block-content ul, 
+.form-sidebar-block-content ol{
+    margin: 0;
+}
+
+@media (min-width: 960px){
+    #content{
+        width: 920px;
+        margin: 0 auto;
+        padding: 30px 0;
+    }
+    h1{
+        margin-bottom: 50px;
+    }
+    .form{
+        width: 510px;
+        display: inline-block;
+    }
+    .form-sidebar{
+        padding: 0;
+        display: inline-block;
+        width: 360px;
+        margin-left: 20px;
+        vertical-align: top;
+    }
+}
